--- a/myCodes/index.html
+++ b/myCodes/index.html
@@ -24,13 +24,13 @@
         <!-- Unordered List -->
         <!-- This is hidden for small screens, hamburger menu will be visible thereafter -->
         <div class="hidden xl:flex gap-5 font-ggSans font-[600]">
-            <a href="#">Download</a>
-            <a href="#">Nitro</a>
-            <a href="#">Discover</a>
-            <a href="#">Safety</a>
-            <a href="#">Support</a>
-            <a href="#">Blog</a>
-            <a href="#">Courses</a>
+            <a href="#" class="capitalize hover:underline">download</a>
+            <a href="#" class="capitalize hover:underline">nitro</a>
+            <a href="#" class="capitalize hover:underline">discover</a>
+            <a href="#" class="capitalize hover:underline">safety</a>
+            <a href="#" class="capitalize hover:underline">support</a>
+            <a href="#" class="capitalize hover:underline">blog</a>
+            <a href="#" class="capitalize hover:underline">courses</a>
         </div>
 
 
@@ -43,15 +43,84 @@
             </a>
         </div>
 
-
+        <!-- for Responsive Layout -->
         <!-- Hamburger Menu (visible for small screens) -->
-        <div class="block xl:hidden">
+        <div class="xl:hidden block">
             <!-- Hamburger Icon (font-awesome) -->
             <i class="fa-solid fa-bars text-[23px]"></i>
         </div>
 
     </nav>
 </section>
+
+<!-- Hero Section -->
+<!-- container -->
+<section class="bg-[#404eed] w-full relative overflow-x-hidden">
+    <!-- Image -->
+    <!-- cloud image -->
+    <img src="./images/Image0.svg" class="hidden xl:block absolute z-10 bottom-0 top-auto scale-x-125" alt="">
+    <!-- left cartoon image -->
+    <img src="./images/Image1.svg" class="hidden xl:block absolute bottom-0 -right-[5%] z-10" alt="">
+    <!-- right cartoon image -->
+    <img src="./images/Image2.svg" class="hidden xl:block absolute bottom-0  -left-[5%] z-10" alt="">
+
+    <!-- content -->
+    <div class="text-[#fff] container max-w-[1200px] xl:px-0 px-7 xl:max-w-[900px] mx-auto xl:h-[555px] flex flex-col gap-5 pt-[50px] xl:pt-[120px]">
+        <!-- Heading -->
+        <h2 class="font-[800] text-left xl:text-center text-[34px] md:text-[56px] font-['GintoNord'] z-20">
+            IMAGINE A PLACE...
+        </h2>
+
+
+        <!-- Paragraph -->
+        <p class="font-[400] text-left xl:text-center text-[16px] md:text-[20px] z-20 leading-[26px] xl:leading-[32.5px] font-['ggSans'] w-[90%] md:w-[70%] xl:w-[90%]  xl:self-center">
+            ...where you can belong to a school club, a gaming group, or a worldwide art community. Where just you and a handful of friends can spend time together. A place that makes it easy to talk every day and hang out more often.
+        </p>
+
+        <!-- Buttons -->
+        <!-- Download Button -->
+        <div class="hidden xl:flex flex-row items-center justify-center gap-10 font-[500] z-20">
+            <a href="#" class="bg-white text-black p-3 px-7 rounded-full hover:text-[#404eed]">
+                <button>
+                    <!-- Download Icon (font-awesome) -->
+                    <i class="fa-solid fa-download mr-2"></i>
+                    Download for Windows
+                </button>
+            </a>
+
+            <!-- Open Discord Button -->
+            <a href="#" class="bg-[#23272a] text-white p-3 px-7 rounded-full">
+                <button>Open Discord in Browser</button>
+            </a>
+        </div>
+
+
+        <!-- for Responsive layout Start -->
+
+        <!-- Download Button for Mobile/Tablet Mode Start -->
+        <div class="flex xl:hidden font-[500] z-20">
+            <a href="#" class="bg-white text-black p-3 px-7 rounded-full hover:text-[#404eed]">
+                <button>
+                    <!-- Download Icon (font-awesome) -->
+                    <i class="fa-solid fa-download mr-2"></i>
+                    Download from Google Play
+                </button>
+            </a>
+        </div>
+
+        <!-- Images -->
+        <img src="./images/Image2.svg" class="block md:hidden -ml-[80px]" alt="">
+        <div class="hidden md:flex xl:hidden -mr-[150px] -mt-[16%] justify-end">
+            <img src="./images/Image1.svg" class="w-[70%]" alt="">
+        </div>
+        <!-- Download Button for Mobile/Tablet Mode End -->
+
+    </div>
+
+</section>
+
+
+
 
 <body>
 
