Update hero section

--- a/myCodes/index.html
+++ b/myCodes/index.html
@@ -95,9 +95,10 @@
         </div>
 
 
-        <!-- for Responsive layout Start -->
-
-        <!-- Download Button for Mobile/Tablet Mode Start -->
+        <!-- for Responsive layout Start-->
+        
+        <!-- Mobile/Tablet Mode Start -->
+        <!-- Download Button -->
         <div class="flex xl:hidden font-[500] z-20">
             <a href="#" class="bg-white text-black p-3 px-7 rounded-full hover:text-[#404eed]">
                 <button>
@@ -107,14 +108,14 @@
                 </button>
             </a>
         </div>
-
         <!-- Images -->
         <img src="./images/Image2.svg" class="block md:hidden -ml-[80px]" alt="">
         <div class="hidden md:flex xl:hidden -mr-[150px] -mt-[16%] justify-end">
             <img src="./images/Image1.svg" class="w-[70%]" alt="">
         </div>
-        <!-- Download Button for Mobile/Tablet Mode End -->
-
+        <!-- Mobile/Tablet Mode End -->
+        
+<!-- for Responsive layout End -->
     </div>
 
 </section>
